// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with children and no parentId render correctly 1`] = `
<div
  style={
    Object {
      "marginBottom": 20,
    }
  }
>
  <h5
    className="MuiTypography-root-33 MuiTypography-h5-49"
    style={
      Object {
        "marginBottom": 20,
      }
    }
  >
    foo-name
  </h5>
  <div
    className="MuiPaper-root-78 MuiPaper-elevation2-82 MuiPaper-rounded-79"
  >
    <label
      className="MuiFormControlLabel-root-1"
      style={
        Object {
          "margin": 0,
        }
      }
    >
      <span
        className="MuiButtonBase-root-21 MuiIconButton-root-15 MuiSwitchBase-root-11 MuiCheckbox-root-5 MuiCheckbox-colorSecondary-10"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role={undefined}
        tabIndex={null}
      >
        <span
          className="MuiIconButton-label-20"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-24"
            color={undefined}
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
            />
          </svg>
          <input
            autoFocus={undefined}
            checked={false}
            className="MuiSwitchBase-input-14"
            data-indeterminate={false}
            disabled={undefined}
            id={undefined}
            name="category-root-321"
            onChange={[Function]}
            readOnly={undefined}
            required={undefined}
            tabIndex={undefined}
            type="checkbox"
            value="foo-children"
          />
        </span>
        <span
          className="MuiTouchRipple-root-68"
        />
      </span>
      <span
        className="MuiTypography-root-33 MuiTypography-body1-42 MuiFormControlLabel-label-4"
      >
        foo-children
      </span>
    </label>
  </div>
</div>
`;

exports[`with children render correctly 1`] = `
<div
  className="MuiPaper-root-78 MuiPaper-elevation1-81 MuiExpansionPanel-root-75"
  style={
    Object {
      "flex": 1,
      "width": "100%",
    }
  }
>
  <div
    aria-expanded={false}
    className="MuiButtonBase-root-21 MuiExpansionPanelSummary-root-105"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    style={
      Object {
        "border": "1px solid rgba(0,0,0,.1)",
      }
    }
    tabIndex="0"
  >
    <div
      className="MuiExpansionPanelSummary-content-109"
    >
      <p
        className="MuiTypography-root-33 MuiTypography-body1-42"
      >
        foo-name
      </p>
    </div>
    <div
      aria-hidden="true"
      className="MuiButtonBase-root-21 MuiIconButton-root-15 MuiExpansionPanelSummary-expandIcon-110"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={-1}
    >
      <span
        className="MuiIconButton-label-20"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-24"
          color={undefined}
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </span>
      <span
        className="MuiTouchRipple-root-68"
      />
    </div>
  </div>
  <div
    aria-hidden="true"
    className="MuiCollapse-container-111"
    style={
      Object {
        "minHeight": "0px",
      }
    }
  >
    <div
      className="MuiCollapse-wrapper-113"
    >
      <div
        className="MuiCollapse-wrapperInner-114"
      >
        <div
          className="MuiExpansionPanelDetails-root-115"
          style={
            Object {
              "display": "inline",
              "padding": 0,
            }
          }
        >
          <label
            className="MuiFormControlLabel-root-1"
            style={
              Object {
                "margin": 0,
              }
            }
          >
            <span
              className="MuiButtonBase-root-21 MuiIconButton-root-15 MuiSwitchBase-root-11 MuiCheckbox-root-5 MuiCheckbox-colorSecondary-10"
              onBlur={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role={undefined}
              tabIndex={null}
            >
              <span
                className="MuiIconButton-label-20"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root-24"
                  color={undefined}
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                  />
                </svg>
                <input
                  autoFocus={undefined}
                  checked={false}
                  className="MuiSwitchBase-input-14"
                  data-indeterminate={false}
                  disabled={undefined}
                  id={undefined}
                  name="category-root-321"
                  onChange={[Function]}
                  readOnly={undefined}
                  required={undefined}
                  tabIndex={undefined}
                  type="checkbox"
                  value="foo-children"
                />
              </span>
              <span
                className="MuiTouchRipple-root-68"
              />
            </span>
            <span
              className="MuiTypography-root-33 MuiTypography-body1-42 MuiFormControlLabel-label-4"
            >
              foo-children
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`with no children with component as destroy and filterAction as select render correctly 1`] = `
<label
  className="MuiFormControlLabel-root-1"
  style={
    Object {
      "margin": 0,
    }
  }
>
  <span
    className="MuiButtonBase-root-21 MuiIconButton-root-15 MuiSwitchBase-root-11 MuiCheckbox-root-5 MuiCheckbox-colorSecondary-10"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role={undefined}
    tabIndex={null}
  >
    <span
      className="MuiIconButton-label-20"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-24"
        color={undefined}
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
        />
      </svg>
      <input
        autoFocus={undefined}
        checked={false}
        className="MuiSwitchBase-input-14"
        data-indeterminate={false}
        disabled={undefined}
        id={undefined}
        name="category-root-321"
        onChange={[Function]}
        readOnly={undefined}
        required={undefined}
        tabIndex={undefined}
        type="checkbox"
        value="foo-name"
      />
    </span>
    <span
      className="MuiTouchRipple-root-68"
    />
  </span>
  <span
    className="MuiTypography-root-33 MuiTypography-body1-42 MuiFormControlLabel-label-4"
  >
    foo-name
  </span>
</label>
`;

exports[`with no children with component as destroy and filterAction as select with filterAction as unselect render correctly 1`] = `
<label
  className="MuiFormControlLabel-root-1"
  style={
    Object {
      "margin": 0,
    }
  }
>
  <span
    className="MuiButtonBase-root-21 MuiIconButton-root-15 MuiSwitchBase-root-11 MuiCheckbox-root-5 MuiCheckbox-colorSecondary-10 MuiSwitchBase-checked-12 MuiCheckbox-checked-6"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role={undefined}
    tabIndex={null}
  >
    <span
      className="MuiIconButton-label-20"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-24"
        color={undefined}
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
        />
      </svg>
      <input
        autoFocus={undefined}
        checked={true}
        className="MuiSwitchBase-input-14"
        data-indeterminate={false}
        disabled={undefined}
        id={undefined}
        name="category-root-321"
        onChange={[Function]}
        readOnly={undefined}
        required={undefined}
        tabIndex={undefined}
        type="checkbox"
        value="foo-name"
      />
    </span>
    <span
      className="MuiTouchRipple-root-68"
    />
  </span>
  <span
    className="MuiTypography-root-33 MuiTypography-body1-42 MuiFormControlLabel-label-4"
  >
    foo-name
  </span>
</label>
`;
